--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/milad_bru-modified.png" alt="">
+  <img src="milad_bru-modified.png" alt="">
   <h1>Milad Etemadi</h1>
   <p>
     <em><strong>Cryptonaut, Techie, 101</strong>
